// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. iconemail sets a width when height is set 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight={50}
  bbWidth={68.75}
  focusable={false}
  height={50}
  meetOrSlice={0}
  minX={0}
  minY={0}
  role="img"
  style={
    Object {
      "backgroundColor": "transparent",
      "borderWidth": 0,
      "flex": 0,
      "height": 50,
      "opacity": 1,
      "width": 68,
    }
  }
  title="Email Icon"
  vbHeight={16}
  vbWidth={22}
  width={68.75}
/>
`;

exports[`2. iconfacebook sets a width when height is set 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight={50}
  bbWidth={25}
  focusable={false}
  height={50}
  meetOrSlice={0}
  minX={14}
  minY={10}
  role="img"
  style={
    Object {
      "backgroundColor": "transparent",
      "borderWidth": 0,
      "flex": 0,
      "height": 50,
      "opacity": 1,
      "width": 25,
    }
  }
  title="Facebook Icon"
  vbHeight={20.397258758544922}
  vbWidth={10.592460632324219}
  width={25}
/>
`;

exports[`3. iconforwardarrow sets a width when height is set 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight={12}
  bbWidth={7}
  focusable={false}
  height={12}
  meetOrSlice={0}
  minX={42}
  minY={12}
  style={
    Object {
      "backgroundColor": "transparent",
      "borderWidth": 0,
      "flex": 0,
      "height": 12,
      "opacity": 1,
      "width": 7,
    }
  }
  vbHeight={120}
  vbWidth={60}
  width={7}
/>
`;

exports[`4. iconstar sets a width when height is set 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight={50}
  bbWidth={50}
  focusable={false}
  height={50}
  meetOrSlice={0}
  minX={0}
  minY={0}
  role="img"
  style={
    Object {
      "backgroundColor": "transparent",
      "borderWidth": 0,
      "flex": 0,
      "height": 50,
      "opacity": 1,
      "width": 50,
    }
  }
  title="Save star"
  vbHeight={18}
  vbWidth={18}
  width={50}
/>
`;

exports[`5. iconcopylink sets a width when height is set 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight={50}
  bbWidth={15}
  focusable={false}
  height={50}
  meetOrSlice={0}
  minX={0}
  minY={0}
  role="img"
  style={
    Object {
      "backgroundColor": "transparent",
      "borderWidth": 0,
      "flex": 0,
      "height": 50,
      "opacity": 1,
      "width": 15,
    }
  }
  title="Copy link to clipboard"
  vbHeight={15}
  vbWidth={15}
  width={15}
/>
`;

exports[`6. iconsavebookmark sets a width when height is set 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight={50}
  bbWidth={12}
  focusable={false}
  height={50}
  meetOrSlice={0}
  minX={0}
  minY={0}
  role="img"
  style={
    Object {
      "backgroundColor": "transparent",
      "borderWidth": 0,
      "flex": 0,
      "height": 50,
      "opacity": 1,
      "width": 12,
    }
  }
  title="Save to My Articles"
  vbHeight={16}
  vbWidth={12}
  width={12}
/>
`;

exports[`7. icontwitter sets a width when height is set 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight={50}
  bbWidth={62.5}
  focusable={false}
  height={50}
  meetOrSlice={0}
  minX={-354.2}
  minY={-279.4}
  role="img"
  style={
    Object {
      "backgroundColor": "transparent",
      "borderWidth": 0,
      "flex": 0,
      "height": 50,
      "opacity": 1,
      "width": 62,
    }
  }
  title="Twitter Icon"
  vbHeight={600}
  vbWidth={750}
  width={62.5}
/>
`;

exports[`8. iconvideo sets a width when height is set 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight={50}
  bbWidth={85}
  focusable={false}
  height={50}
  meetOrSlice={0}
  minX={0}
  minY={0}
  role="img"
  style={
    Object {
      "backgroundColor": "transparent",
      "borderWidth": 0,
      "flex": 0,
      "height": 50,
      "opacity": 1,
      "width": 85,
    }
  }
  title="Video Icon"
  vbHeight={40}
  vbWidth={68}
  width={85}
/>
`;

exports[`9. iconvideo360player sets a width when height is set 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight={50}
  bbWidth={54}
  focusable={false}
  height={50}
  meetOrSlice={0}
  minX={0}
  minY={0}
  role="img"
  style={
    Object {
      "backgroundColor": "transparent",
      "borderWidth": 0,
      "flex": 0,
      "height": 50,
      "opacity": 1,
      "width": 54,
    }
  }
  title="Video 360 Player Icon"
  vbHeight={100}
  vbWidth={108}
  width={54}
/>
`;

exports[`10. thestlogo sets a width when height is set 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight={50}
  bbWidth={50}
  focusable={false}
  height={50}
  meetOrSlice={0}
  minX={0}
  minY={0}
  role="img"
  style={
    Object {
      "backgroundColor": "transparent",
      "borderWidth": 0,
      "flex": 0,
      "height": 50,
      "opacity": 1,
      "width": 50,
    }
  }
  title="ST"
  vbHeight={20}
  vbWidth={29}
  width={50}
/>
`;

exports[`11. thetimeslogo sets a width when height is set 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight={50}
  bbWidth={50}
  focusable={false}
  height={50}
  meetOrSlice={0}
  minX={0}
  minY={0}
  role="img"
  style={
    Object {
      "backgroundColor": "transparent",
      "borderWidth": 0,
      "flex": 0,
      "height": 50,
      "opacity": 1,
      "width": 50,
    }
  }
  title="The Times"
  vbHeight={20}
  vbWidth={20}
  width={50}
/>
`;

exports[`12. closeicon sets a width when height is set 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight={50}
  bbWidth={28}
  focusable={false}
  height={50}
  meetOrSlice={0}
  minX={0}
  minY={0}
  role="img"
  style={
    Object {
      "backgroundColor": "transparent",
      "borderWidth": 0,
      "flex": 0,
      "height": 50,
      "opacity": 1,
      "width": 28,
    }
  }
  title="Close Icon"
  vbHeight={28}
  vbWidth={28}
  width={28}
/>
`;
